# sand

./: .gitignore  CMakeLists.txt  README.org
include/: entt.hpp
include/sand/: core.hpp  entity_factory.hpp  systems.hpp  util.hpp
include/sand/box2d/system/: physics.hpp
include/sand/component/: ai.hpp  living_thing.hpp  movement.hpp  movement_intent.hpp  player_controllable.hpp  position.hpp  renderer_data.hpp  rendering.hpp
include/sand/core/: concepts.hpp  main_loop.hpp  marching_cubes.hpp  noise.hpp  random.hpp  z_index.hpp
include/sand/dependencies/wise_enum/: wise_enum.hpp
include/sand/sdl/system/: event.hpp  rendering.hpp
include/sand/system/: ai.hpp  event.hpp  kbd_control.hpp  life.hpp  movement.hpp  physics.hpp  renderer.hpp  rendering.hpp  sprite_data.hpp
include/sand/test/system/: system_test.hpp
include/sand/world/: biome.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  main_loop.cpp
src/dependencies/imgui/: CMakeLists.txt  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
src/sdl/: CMakeLists.txt
src/sdl/system/: CMakeLists.txt  event.cpp  rendering.cpp
src/system/: CMakeLists.txt  ai.cpp  handle_events.cpp  life.cpp  movement.cpp  physics.cpp  renderer.cpp  rendering.cpp
tests/: CMakeLists.txt  noise_test.cpp  z_index_test.cpp
tests/system/: movement.cpp  physics.cpp
